# OBIR

./: .gitignore  .gitmodules  sourceMe.sh
common/: .gitignore
doc/: sources.md
doc/notes/: ESP8266_IDF.tex  sections.tex
lab/lab_1/: checklist.md  test.bash
lab/lab_1/app/coap_server/: CMakeLists.txt  Makefile  sdkconfig
lab/lab_1/app/coap_server_m/: Makefile  sdkconfig
lab/lab_1/app/udp_becho/: CMakeLists.txt  Makefile
lab/lab_1/app/udp_calc/: CMakeLists.txt  (+2 more)
lab/lab_2/app/: .gitignore
lab/lab_3/: note.md  setup.bash
lab/lab_3/src/: flows.json
project/: .Dockerignore  .gitignore  README.md  pdu.c  sourceMe.bash  sourceMeVirt.bash  txt
project/coap_server/: CMakeLists.txt  sdkconfig  test.bash  txt
project/coap_server/main/: CMakeLists.txt
project/components/esp_libcoap/: CMakeLists.txt  call_graph.md
project/components/esp_libcoap/include/: address.h  async.h  bits.h  block.h  coap.h  coap_config.h  coap_debug.h  coap_dtls.h  coap_event.h  coap_hashkey.h  coap_io.h  coap_session.h  coap_time.h  encode.h  libcoap.h  mem.h  net.h  option.h  pdu.h  prng.h  resource.h  str.h  subscribe.h  uri.h
project/components/esp_libcoap/original/: option.c
project/components/esp_libcoap/src/: address.c  async.c  block.c  coap_debug.c  coap_event.c  coap_hashkey.c  coap_io.c  coap_session.c  coap_time.c  encode.c  mem.c  net.c  option.c  pdu.c  resource.c  str.c  subscribe.c  uri.c
project/doc/: demonstration.md
project/doc/report/: .gitignore  report.tex
project/esp_libcoap/: CMakeLists.txt
project/scripts/: aliases.bash  env.Dockerfile  virt.bash
(+146 files in other folders)
